# issueforge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  porting_help.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/config/: __init__.py  loader.py  models.py
app/dispatcher/: __init__.py  loop.py
app/executors/: __init__.py  _subprocess.py  base.py  claude_code_executor.py  codex_executor.py  cursor_agent_executor.py  openhands_executor.py  shell_executor.py  stub_executor.py
app/feishu/: __init__.py  message_parser.py  webhook_server.py
app/github/: __init__.py  _gh_cli.py  ci_service.py  issue_service.py  pr_service.py
app/langgraph_app/: __init__.py  checkpoint.py  graph.py  state.py
app/langgraph_app/nodes/: __init__.py  coder.py  context.py  deliverer.py  planner.py  reporter.py  reviewer.py  tester.py
app/observability/: __init__.py  logger.py
app/sandbox/: __init__.py  artifact_store.py  docker_runner.py  worktree.py
app/setup/: __init__.py  detection.py  doctor.py  orchestrator.py  wizard.py
app/temporal_app/: __init__.py  activities.py  client.py  worker.py  workflows.py
configs/: default.yaml
configs/examples/: dimos.yaml  generic-python.yaml
docs/: ARCHITECTURE.md  PORTING.md  usage.md
recipes/: README.md
recipes/github-workflows/: auto-merge.yml  ci.yml
tests/: conftest.py  test_artifact_store.py  test_config.py  test_dispatcher.py  test_executors.py  test_feishu_parser.py  test_graph_round.py  test_phase1_regressions.py  test_phase2.py  test_phase3.py  test_phase4.py  test_setup_detection.py  test_setup_doctor.py  test_setup_orchestrator.py  test_setup_wizard.py  test_workflow_dataclasses.py
