[project]
name = "issueforge"
version = "0.1.0"
description = "IssueForge: a long-running coding-agent worker that turns GitHub issues into PRs. Issue -> Temporal -> LangGraph -> Cursor/Claude/Codex -> PR -> CI -> auto-merge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "IssueForge contributors" }]
keywords = [
    "github",
    "issue",
    "agent",
    "coding-agent",
    "temporal",
    "langgraph",
    "cursor",
    "claude",
    "codex",
    "automation",
    "ci",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "temporalio>=1.6",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0",
    "anyio>=4.4",
]

[project.optional-dependencies]
feishu = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/jackliujlu-bot/issueforge"
Repository = "https://github.com/jackliujlu-bot/issueforge"
Issues = "https://github.com/jackliujlu-bot/issueforge/issues"
Changelog = "https://github.com/jackliujlu-bot/issueforge/blob/main/CHANGELOG.md"

[project.scripts]
# Both names are the same entry point; `issueforge` is the canonical
# OSS name, `agent-worker` is kept as an alias so existing scripts /
# docs / muscle memory keep working.
issueforge = "app.main:app"
agent-worker = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
